--- a/main.yml
+++ b/main.yml
@@ -1,20 +1,22 @@
 ---
-- name: Update package list
-  apt: 
-    update_cache: yes 
-    cache_valid_time: 36000
-  
-- name: Add the users
-  user:
-    name: "{{ item.username }}"
-    comment: "{{ item.comment }}"
-    state: "{{ item.state }}"
-    shell: "{{ item.shell|default('/bin/bash') }}"
-  with_items: "{{ users }}"
-  tags: users
+  become: yes
+  tasks:
+  - name: Update package list
+    apt: 
+      update_cache: yes 
+      cache_valid_time: 36000
+    
+  - name: Add the users
+    user:
+      name: "{{ item.username }}"
+      comment: "{{ item.comment }}"
+      state: "{{ item.state }}"
+      shell: "{{ item.shell|default('/bin/bash') }}"
+    with_items: "{{ users }}"
+    tags: users
 
-- name: Adding SSH Keys
-  authorized_key:
-    user: ubuntu
-    key: "{{ lookup('file', '~/.ssh/id_rsa.pub') }}"
-  tags: users
+  - name: Adding SSH Keys
+    authorized_key:
+      user: ubuntu
+      key: "{{ lookup('file', '~/.ssh/id_rsa.pub') }}"
+    tags: users
