Defined the goal. Added a taks to the simple playbook

--- a/update.yml
+++ b/update.yml
@@ -8,3 +8,8 @@
       apt:
         update_cache: yes
         upgrade: dist
+
+  tasks:
+    - name: Check disk space and memory
+      shell: free -m && df -h
+
