--- a/playbook/roles/common/tasks/main.yml
+++ b/playbook/roles/common/tasks/main.yml
@@ -1,12 +1,5 @@
-- name: install python 2
-  raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
-  
-- name: install curl and git
+- name: install curl
   apt:
-    name: "{{ item }}"
+    name: curl
     state: present
     update_cache: yes
-    
-  with_items:
-    - curl
-    - git
