--- a/playbook/roles/db/tasks/main.yml
+++ b/playbook/roles/db/tasks/main.yml
@@ -12,6 +12,11 @@
     value: "{{ mysql_root_password | quote }}"
     vtype: password
 
+- name: install mysql-python
+  apt: 
+    name: python-mysqldb
+    state: present
+
 - name: install mysqlserver
   apt:
     name: "{{ item }}"
