Removed unnecessary quotes aroung passw

--- a/playbook/roles/db/tasks/main.yml
+++ b/playbook/roles/db/tasks/main.yml
@@ -2,20 +2,23 @@
   debconf:
     name: mysql-server
     question: mysql-server/root_password
-    value: "{{ mysql_root_password | quote }}"
+    value: "{{ mysql_root_password }}"
     vtype: password
+  tags: ['mysql']
 
 - name: confirm mysql root password
   debconf:
     name: mysql-server
     question: mysql-server/root_password_again
-    value: "{{ mysql_root_password | quote }}"
+    value: "{{ mysql_root_password }}"
     vtype: password
+  tags: ['mysql']
 
 - name: install mysql-python
   apt: 
     name: python-mysqldb
     state: present
+  tags: ['mysql']
 
 - name: install mysqlserver
   apt:
@@ -24,5 +27,6 @@
   with_items:
     - mysql-server
     - mysql-client
+  tags: ['mysql']
   
 - include: harden.yml
