Silencing Ansible warning about apt module

--- a/ready_update.yml
+++ b/ready_update.yml
@@ -8,6 +8,7 @@
       apt:
         update_cache: yes
         upgrade: dist
+        force_apt_get: yes
 
     - name: Check disk space and memory
       shell: free -m && df -h
