Updating code after warning about deprecation

--- a/ready_playbook/roles/db/tasks/main.yml
+++ b/ready_playbook/roles/db/tasks/main.yml
@@ -22,7 +22,8 @@
 
 - name: install mysqlserver
   apt:
-    name: "{{ item }}"
+    name: 
+      ['mysql-server', 'mysql-client']
     state: present 
   with_items:
     - mysql-server
