Change after linter suggestion

--- a/ready_playbook/roles/php/tasks/main.yml
+++ b/ready_playbook/roles/php/tasks/main.yml
@@ -1,16 +1,9 @@
 - name: install php7
   apt:
-    name: "{{ item }}"
+    name:
+      ['php7.2-mysql', 'php7.2-curl', 'php7.2-json', 'php7.2-cgi', 'php7.2', 'libapache2-mod-php7.2']
     state: present
     force_apt_get: yes
-
-  with_items:
-    - php7.2-mysql
-    - php7.2-curl
-    - php7.2-json
-    - php7.2-cgi
-    - php7.2
-    - libapache2-mod-php7.2
   notify:
     - restart apache2
   tags: ["web"]
