--- a/ready_playbook/roles/web/tasks/main.yml
+++ b/ready_playbook/roles/web/tasks/main.yml
@@ -7,7 +7,7 @@
 
 - name: set the apache2 port to 8080
   template: 
-    src: web.conf.j2
+    src: web.port.j2
     dest: /etc/apache2/ports.conf
     owner: root
     group: root
