--- a/ready_playbook/roles/php/tasks/main.yml
+++ b/ready_playbook/roles/php/tasks/main.yml
@@ -1,7 +1,13 @@
 - name: install php7
   apt:
     name:
-      ['php7.2-mysql', 'php7.2-curl', 'php7.2-json', 'php7.2-cgi', 'php7.2', 'libapache2-mod-php7.2']
+      ['php7.2-mysql', 
+      'php7.2-curl', 
+      'php7.2-json', 
+      'php7.2-cgi', 
+      'php7.2', 
+      'libapache2-mod-php7.2'
+      ]
     state: present
     force_apt_get: yes
   notify:
