--- a/ready_playbook/roles/wordpress/vars/main.yml
+++ b/ready_playbook/roles/wordpress/vars/main.yml
@@ -1,12 +1,16 @@
 new_user_name: wordpress
 new_user_password: t3st 
 
-WordPress_database_name: wordpress
-WordPress_database_username: wordpress
-WordPress_database_password: t3st
+wp_version: 4.0
+wp_install_dir: /var/sites/wordpress
 
-WordPress_site_name: Playground
-WordPress_site_title: About Ansible 
 
-WordPress_admin_username: Panda
-WordPress_admin_password: S0meP@nd@
+wp_database_name: wordpress
+wp_database_username: wordpress
+wp_database_password: t3st
+
+wp_site_name: Playground
+wp_site_title: About Ansible 
+
+wp_admin_username: Panda
+wp_admin_password: S0meP@nd@
