--- a/ready_playbook/roles/wordpress/tasks/main.yml
+++ b/ready_playbook/roles/wordpress/tasks/main.yml
@@ -25,8 +25,9 @@
     copy: no
 
 - name: Wordpresss | Move extracted directory to {{wp_install_dir}}
-  command: /bin/mv /tmp/wordpress "{{wp_install_dir}}" 
-  creates: "{{wp_install_dir}}"
+  command: /bin/mv /tmp/wordpress "{{wp_install_dir}}"
+  args:
+    creates: "{{wp_install_dir}}"
 
 - name: Wordpresss | Remove wordpress-{{wp_version}}.tar.gz
   file: 
