--- a/ready_playbook/roles/wordpress/tasks/main.yml
+++ b/ready_playbook/roles/wordpress/tasks/main.yml
@@ -54,20 +54,15 @@
 - name: Rename WordPress configuration file
   command: mv "{{wp_install_dir}}/config-localhost.php" "{{wp_install_dir}}/config-default.php"
 
-# - name: In a working directory, create a text file wordpress.sql to configure the WordPress database.
-# touch wordpress.sql
-# CREATE DATABASE wordpress;
-# GRANT SELECT,INSERT,UPDATE,DELETE,CREATE,DROP,ALTER ON wordpress.*
-# TO wordpress@localhost
-# IDENTIFIED BY 'yourPassword';
-# FLUSH PRIVILEGES;
+- name: Configure the WordPress database
+  template:
+    src: create_wp_db.j2
+    dest: ./wordpress.sql
+    owner: root
+    group: root
+    mode: 0644
 
-# - name: Create WP database
-# cat wordpress.sql | sudo mysql --defaults-extra-file=/etc/mysql/debian.cnf
+- name: Create WP database
+  shell: cat wordpress.sql | sudo mysql --defaults-extra-file=/etc/mysql/debian.cnf
+
 # After the command completes, delete the file wordpress.sql
-
-
-# - name: Move the WordPress installation to the web server document root.
-# sudo ln -s /usr/share/wordpress /var/www/html/wordpress
-# sudo mv /etc/wordpress/config-localhost.php /etc/wordpress/config-default.php
-
