--- a/ready_playbook/site_wp.yml
+++ b/ready_playbook/site_wp.yml
@@ -1,7 +1,7 @@
 - name: LAMP stack setup on Ununtu 18.04
   hosts: lamp
   remote_user: "{{ remote_username }}"
-  become: True
+  become: yes
   
   roles:
    - common
