--- a/ready_playbook/roles/wordpress/tasks/main.yml
+++ b/ready_playbook/roles/wordpress/tasks/main.yml
@@ -3,21 +3,24 @@
     name: wordpress
     state: present
     force_apt_get: yes
+  
 
-- name: Wordpress | Configure WordPress to use MySQL and PHP
+- name: Configure WordPress to use MySQL and PHP
   template:
     src: wp.conf.j2
     dest: /etc/wordpress/config-localhost.php
+  
 
 - name: Configure the WordPress database
   template:
     src: create_wp_db.j2
     dest: wordpress.sql
+  
 
 - name: Create WP database
   shell: cat wordpress.sql | sudo mysql --defaults-extra-file=/etc/mysql/debian.cnf
 
-- name: Wordpress | Link the WordPress files to the desired location on your web server
+- name: Link the WordPress files to the desired location on your web server
   file:
     src: /usr/share/wordpress
     dest: /var/www/html/wordpress
@@ -25,6 +28,3 @@
 
 - name: Rename WordPress configuration file
   command: mv /etc/wordpress/config-localhost.php /etc/wordpress/config-default.php
-
-
-# After the command completes, delete the file wordpress.sql
