--- a/playbook/bkp_site.yml
+++ b/playbook/bkp_site.yml
@@ -1,4 +1,4 @@
-- name: LAMP stack setup on Ununtu 18.04
+- name: LAMP stack setup and Wordpress installation on Ubuntu 18.04
   hosts: lamp
   remote_user: "{{ remote_username }}"
   become: yes
