REplacing values byu variables

--- a/playbook/roles/wordpress/vars/main.yml
+++ b/playbook/roles/wordpress/vars/main.yml
@@ -1,13 +1,6 @@
-new_user_name: wordpress
-new_user_password: s^p3rs3kr3t
-
-wp_version: 4.0
-wp_install_dir: /var/sites/wordpress
-
-
-wp_database_name: wordpress
+wp_database: wordpress
 wp_database_username: wordpress
-wp_database_password: my*8*8t3st
+wp_database_password: s^p3rs3kr3t
 
 wp_site_name: Playground
 wp_site_title: About Ansible 
